2013-03-21 Attila Krasznahorkay <Attila.Krasznahorkay@cern.ch>
	* Adding the NTUP_COMMON definition to Reco_trf.py
	* Tagging as PATJobTransforms-00-05-09

2013-03-20  John Chapman  <John.Chapman@cern.ch>
	* requires SimuJobTransforms-00-18-62 onwards or
	SimuJobTransforms-00-18-38-11 onwards.
	* share/skeleton.MergeHit.py - adapt to use SimuJobTransforms
	HitsFilePeeker. Specifying a geometryVersion is now optional for
	Merging_t(r)f.py when merging HITS files.
	* tagging as PATJobTransforms-00-05-08	

2013-03-12 Graeme Stewart <graeme.andrew.stewart@cern.ch>
    * Configuration.py
      - Add AddOutputNTUP_FTKIPFile argument definition function

2013-03-11 Graeme Stewart <graeme.andrew.stewart@cern.ch>
    * skeleton.AODtoDPD_trf.py 
      - Remove the automated VOFinder set and lock from TOP DPDs
    * ValidateD3PD_trf.py
      - Add PhysVal_Photons.root to list of root files to merge
    * skeleton.ValidateD3PD_trf.py
      - Add JO fragment to activate in PhysVal_Photons.root
      - Add hooks for {pre/post}{Exec/Include}
    * tagging as PATJobTransforms-00-05-07

2013-02-27 Graeme Stewart <graeme.andrew.stewart@cern.ch>
    * Reco_trf.py Add outputNTUP_FTKIPFile to LODPK
    * Merging_trf.py Make the inputLogsFile optional for Hits merging
    * tagging as PATJobTransforms-00-05-06

2013-02-25 Graeme Stewart <graeme.andrew.stewart@cern.ch>
    * Reco_trf.py Add outputDAODM_HSG1File to LODPK
    * tagging as PATJobTransforms-00-05-05

2013-02-14  John Chapman  <John.Chapman@cern.ch>
	
	* tagging as PATJobTransforms-00-05-04
	* share/skeleton.MergeHIT.py - add code to configure DetFlags
	based on available SimHit containers. Should fix problems seen in
	merging of upgrade layout without the TRT and also AFII RTT jobs.

2013-02-07  Sebastien Binet  <binet@cern.ch>

	* tagging as PATJobTransforms-00-05-03
	* proper python module structure
	* A python/__init__.py

2013-02-04  Sebastien Binet  <binet@cern.ch>

	* tagging as PATJobTransforms-00-05-02