@@ -1,3 +1,8 @@
+2013-03-22 Graeme Stewart <graeme.andrew.stewart@cern.ch>
+    * skeleton.ValidateD3PD_trf.py
+      - Define a logging object for pre/postExec logging to act on
+    * Tagging as PATJobTransforms-00-05-10
+
 2013-03-21 Attila Krasznahorkay <Attila.Krasznahorkay@cern.ch>
 	* Adding the NTUP_COMMON definition to Reco_trf.py
 	* Tagging as PATJobTransforms-00-05-09
